# kat

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cmake/: kat_init_picotool.cmake
kat/: CMakeLists.txt  spi_dma.c
tools/: .gitignore
